k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aleclabs-home
  labels:
    app: aleclabs-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aleclabs-home
  template:
    metadata:
      labels:
        app: aleclabs-home
    spec:
      containers:
      - name: aleclabs-home
        image: aleclabs-home:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
