k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aleclabs-home
spec:
  selector:
    app: aleclabs-home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
